--- a/src/app/product-details/product-details.component.html
+++ b/src/app/product-details/product-details.component.html
@@ -5,4 +5,6 @@
   <!-- <h4>{{ product.price | currency }}</h4>, uses the currency pipe to transform product.price from a number to a currency string -->
   <h4>{{ product.price | currency }}</h4>
   <p>{{ product.description }}</p>
+  <!-- bind the click() event to the addToCart() method -->
+  <button type="button" (click)="addToCart(product)">Buy</button>
 </div>
